--- a/evolution-hs.cabal
+++ b/evolution-hs.cabal
@@ -11,9 +11,20 @@ extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Types
+  exposed-modules:     Types,
+                       Imports
   build-depends:       base >=4.8 && <4.9,
                        mtl,
-                       transformers
+                       transformers,
+                       text,
+                       syb,
+                       containers
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+
+test-suite test
+  type:                exitcode-stdio-1.0
+  main-is:             Test.hs
+  hs-source-dirs:      test
+  build-depends:       base, evolution-hs, tasty, tasty-QuickCheck
